--- a/CritterWorld/CritterScorePanel.resx
+++ b/CritterWorld/CritterScorePanel.resx
@@ -117,4 +117,56 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelHealth.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAARtJREFUOE9joCtYFRrKDGVigv1WWqn7LDWv7bPU/rvfXPPlAUvtySfMVPhAeL+F
+        9pR95prvgHL/QGoOWmjFQ7VBwAFLrXKghv8Y2ELzNBhjkdtvqV0C1nzMQkvogLn2d2yK8OF9llrf9tvr
+        CzDst9DywKaAKGyu4wo0QNMFqyQReL+5tgPDfnstHqB/PmJTgBeba74/Y2zMBQ4HUAxgVYQX6ySBNcPA
+        AQvtJuwKMfF+S61aqDZUAAzQCdg0IGNgmuiBKscE/xkYGPeba83FphGMLbRnQZXiBkBDmIBOXImpWWs5
+        SA6qDD8Ahi4r0Klb4ZrNNTfvt7dngUoTB/bby3McsNTcv89Ccx+IDRUmDRyxUucFpRMoFwtgYAAA0CAw
+        4M6q1CwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="labelEnergy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAQpJREFUOE9jGKwgl52JIbYYiBsRODqXgSGWG6qAEIgxEuELabq2mn8nCK/tkT0s
+        Kx48GSpJGDAzxHiHONnV/D/D8B+Ea5P1HwBt14FKEwZAA1ImFqt3gjTf38Tz39bAbQlUijjAwhDdcnKB
+        yByQAeVxRs8ZGOLDGBji5KDShAETQ9TEuxv49vw6wfR/VafcW08Lp3kczJGLodIEASMjQ/TaRQ1Kjw/P
+        Fvv97zTD/44cncd8nKFmUHliQJQBKCClRYIOHJ4j9txCx7MHKkEKiFFhYYqudjByPQFKF1BB4gHQBQGC
+        XBHT5SUCPCEiJAJg6utjYojphXJJBQkcjAwx5xkYIkWgAoMWMDAAAMkCT/h6HO9ZAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="labelEscaped.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAUNJREFUOE+l0r8rxHEcx/Evslj82rjFIhkoRbpTLn+AQUwuomQRyYJzdTeSEgMG
+        JQMmuVkMshgkixElJQMlg0k8X5/v53Pd1zep773q0X1+fPt8P/d+f71facAg5pDGCnpQheK0Q8+YDKEF
+        OVwjiTbU4QnvOMISxnCCR5zBJI5LfOEb3XDZgtayaIb2HuzaKQq5gxZlE5PYwDL2kIeLXvaCQzOzWYOu
+        OgNd/QM67A3lqMEqpjCCRqyjkA5c+UOTHbgbdWqB3EDzUdQicIBygYQ/9AYwbX9TlqvHArR3jEAy2MYu
+        9KA6o/RB831UQAdoHiiiEsMztCn6BlrRhU/cQ5mA9nXjUM6hzVeo3yrqLFTxW8zjAPoG9L2Eovappf2o
+        1kJRytCEejP7I6quOlBSFuEKGCm9GPeH0VKJkv/GMNTCf+J5P8plSuKXYCPcAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="labelDead.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAMoSURBVDhPddN7SJV3GAfw533Pe38995x20OU5Oi/TKAzntHm21dws0kiN2GylUuEUy42xUTE2
+        5mgyYWxTy8s8tUGkrhUrj8JYkpukJHRBg65/ZLWcQX+UyAnLb89xnA2kfvD963mez+8CP/reIs6nU1cp
+        IArkJYrtsYgfDCV5h8/nZIXC+SvJe/aIRayNI/K0ck8T99bzzE7itQAoG3/Lj9mmb4HgCeDPgX/TfxKz
+        Ld9hbLUfDFQ+D/hisqIMc4FWPAl04GFDPS5/WINLu6ow9dXneNzWzLV23K0sAwPfLATeub5+DWY+/Qj3
+        dlUjuDIbVabxdx5R2wqiliq7eWt0VR4mt7yL0Cd1uFKYDwZK5oEv+U7HkuJws7gI4xsKcTAxDkuJShkg
+        BmjG6aDh2NiRs69m4kZhAS4XFWCC+w754hEB3hxMT0Z/Rhp+S3sJy3mYAQoaMl01tTBw4VpmBsZeTkLv
+        67k4kJuF31MTcYpTLgrF1KDJrb1OKzo4e6zmNAPUaAgR4MJItA3DNgW/JEQjL0oLFGmWyaYoBb0OE1sU
+        6SjtNpTBZl3B16aK9xWpixMBzg3YVAxqArqio7DckLsZoK2y2L7XlPGTZsEOVRqjWl35Yx8Pl6siNluE
+        riqbGgbO9ZgW9OkCjjt1+HWpmwGq0OdzeKtdxz4GNqnSRdquSI2HHAbqLISP3fY5BobbVEKPRug1JWxU
+        xG4GqEZTaZssUbnbhlqrimY+xSpJ/JneE4RlAZcVnbKAlsVu9DgNBBkY0URUi8IRBuiob0kE2Nngi8WP
+        XO+wafAIQn4YoBpDvTvqMnBcIvQZAka9i1EvSb+2OGwUcLkiwGcdKT4E+V3OWGVUaPIsA0R+fnVO2g/O
+        KEy4DQw5VJxO9aHdEwMGxg+6XJcYwEBGMkZi7Ljh0NDEuy8iyuX8B1CKQBv281Vux0fjTrIHD3IzEVr7
+        Bh4Vvo3p/BxMpftwc4kbzXYTCQJVhocXAhRPlL5NVyf6fB7889orCJWsQ6i0CFP+bPT7XkSlptx3E61k
+        YH74WQDxl415gSg7R6DGEkXuL+bk8JfhZn+4xgD9DxA9Bf84XL0tl42EAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
