--- a/Documentation/Changes.txt
+++ b/Documentation/Changes.txt
@@ -1,3 +1,8 @@
+Version 2.1
+
+ - Fix possible NPE in Critter.
+ - Dead CritterS could send messages to controller. Fixed.
+
 Version 2.0
 
  - CritterWorld 2 begins.
